--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@vercel/node": "^2.9.8",
     "body-parser": "^1.20.2",
+    "chromium": "^3.0.3",
     "express": "^4.18.2",
     "multer": "^1.4.5-lts.1",
     "path": "^0.12.7",
